--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         console.log('Image URL: ' + profile.getImageUrl());
         console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
         var id_token = googleUser.getAuthResponse().id_token;
-        // console.log(id_token)
+        console.log(id_token)
 
         const data={
             id_token,
